[metadata]
name = px

[options]
...

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=myproject --cov-report=term-missing

[coverage:run]
source = myproject

[coverage:report]
fail_under = 80

[flake8]
...

[mypy]
...

[pylint]
...

[pylint.messages_control]
...

test_suite = tests


[tool:pytest]
addopts = --cov=myproject --cov-report=term-missing --cov-fail-under=80
